# SAEBench

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  graphing.ipynb  old_graphing.ipynb  pyproject.toml  sae_bench_demo.ipynb  sae_regex_selection.ipynb
.github/workflows/: build.yml
custom_saes/: base_sae.py  batch_top_k.py  batch_topk_sae.py  gated_sae.py  identity_sae.py  jumprelu_sae.py  pca_sae.py  relu_sae.py  run_all_evals_custom_saes.py  run_all_evals_dictionary_learning_saes.py  topk_sae.py
evals/absorption/: feature_absorption_calculator.py
sae_bench/custom_saes/: README.md  base_sae.py  batch_topk_sae.py  custom_sae_config.py  gated_sae.py  identity_sae.py  jumprelu_sae.py  pca_sae.py  relu_sae.py  run_all_evals_custom_saes.py  run_all_evals_dictionary_learning_saes.py  topk_sae.py
sae_bench/evals/: base_eval_output.py  generate_json_schemas.py  memory_utils.py
sae_bench/evals/absorption/: README.md  common.py  eval_config.py  eval_output.py  eval_output_schema_absorption_first_letter.json  feature_absorption.py  feature_absorption_calculator.py  k_sparse_probing.py  main.py  probing.py  prompting.py  vocab.py
sae_bench/evals/autointerp/: demo.py  eval_config.py  eval_output.py  eval_output_schema_autointerp.json  main.py  mlp_neurons_vs_saes.py  sae_encode.py
sae_bench/evals/core/: convert_directory.py  eval_config.py  eval_output.py  eval_output_schema_core.json  main.py
sae_bench/evals/mdl/: eval_config.py  graphing_mdl.ipynb  main.py
sae_bench/evals/ravel/: README.md  README_uniprobe.md  clean_prototype.ipynb  das.py  das_config.py  das_main.py  dataset_builder.py  dbm.py  dbm_adam.py  dbm_claude.py  dbm_main.py  dbm_main_nnsight.py  dbm_neurons.py  eval_config.py  eval_config_old.py  eval_output.py  eval_output_schema_ravel.json  generation.py  instance.py  intervention.py  main.py  mdas.py  mdbm.py  ravel_dataset_builder.py  supervised_baseline.py  uniprobe.py  utils.py  validation.py
sae_bench/evals/ravel/utils/: general.py  generate_ravel_instance.py
sae_bench/evals/scr_and_tpp/: dataset_creation.py  eval_config.py  eval_output.py  eval_output_schema_scr.json  eval_output_schema_tpp.json  main.py
sae_bench/evals/sparse_probing/: README.md  eval_config.py  eval_output.py  eval_output_schema_sparse_probing.json  main.py  probe_training.py
sae_bench/evals/sparse_probing/testing_notebooks/: dataset_testing.ipynb  main_experiments.py  probe_training.ipynb  testing_gemma.ipynb
sae_bench/evals/unlearning/: README.md  eval_config.py  eval_output.py  example.ipynb  main.py
sae_bench/evals/unlearning/utils/: eval.py  feature_activation.py  intervention.py  metrics.py  var.py
sae_bench/evals_outputs_typescript_types/: README.md  eval_output_schema_core.d.ts
sae_bench/sae_bench_utils/: __init__.py  activation_collection.py  dataset_utils.py  general_utils.py  graphing_utils.py  indexing_utils.py  sae_selection_utils.py  testing_utils.py
sae_bench/sae_bench_utils/misc_notebooks/: blog_post_graphs.ipynb  eval_template.ipynb  export_results.ipynb  modify_old_results.ipynb  test_dictionary_learning.ipynb  test_submodule.ipynb
sae_bench_utils/: activation_collection.py  general_utils.py  graphing_utils.py
sae_bench_utils/misc_notebooks/: test_dictionary_learning.ipynb
shell_scripts/: run.sh  run_reduced_memory.sh  run_reduced_memory_1m_width.py
tests/: conftest.py
tests/acceptance/: test_absorption.py  test_autointerp.py  test_core.py  test_eval_output.py  test_ravel.py  test_sae_selection_utils.py  test_scr_and_tpp.py  test_sparse_probing.py  test_unlearning.py
tests/acceptance/test_data/absorption/: absorption_expected_results.json
tests/acceptance/test_data/autointerp/: autointerp_expected_results.json
tests/acceptance/test_data/ravel/: ravel_expected_results.json
tests/e2e/: test_absorption.py  test_autointerp.py  test_core.py  test_scr_and_tpp.py  test_sparse_probing.py  test_unlearning.py
tests/unit/sae_bench_utils/: test_sae_bench_utils.py
(+8 files in other folders)
