[tool.poetry]
name = "sae-bench"
version = "0.3.0"
description = "A framework for evaluating sparse autoencoders"
authors = [
    "Adam Karvonen <adam.karvonen@gmail.com>",
    "Can Rager <canrager@gmail.com>",
]
readme = "README.md"
packages = [{ include = "sae_bench" }]
repository = "https://github.com/adamkarvonen/SAEBench"
keywords = ["sparse-autoencoders", "mechanistic-interpretability", "PyTorch"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence"]

[tool.poetry.dependencies]
python = "^3.10,"
sae_lens = ">=4.4.2"
transformer-lens = ">=2.0.0"
torch = ">=2.1.0"
einops = ">=0.8.0"
numpy = ">=1.26.4,<2.0"
pandas = ">=2.1.2"
tqdm = ">=4.66.4"
jaxtyping = ">=0.2.25"
beartype = ">=0.14.1"
scikit-learn = ">=1.5.2"
collectibles = ">=0.1.5"
pydantic = ">=2.9.2"
seaborn = ">=0.13.2"
plotly = ">=5.22.0"
matplotlib = ">=3.8.4"
tabulate = ">=0.9.0"
openai = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2"
nbformat = ">=5.10.4"
ipykernel = ">=6.29.5"
nbstripout = ">=0.7.1"
loguru = ">=0.7.0"

[tool.pyright]
typeCheckingMode = "standard"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = ["sae_bench/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
build_command = "pip install poetry && poetry build"
