[tool.poetry]
name = "sae-bench"
version = "0.4.1"
description = "A framework for evaluating sparse autoencoders"
authors = [
    "Adam Karvonen <adam.karvonen@gmail.com>",
    "Can Rager <canrager@gmail.com>",
]
readme = "README.md"
packages = [{ include = "sae_bench" }]
repository = "https://github.com/adamkarvonen/SAEBench"
keywords = ["sparse-autoencoders", "mechanistic-interpretability", "PyTorch"]
classifiers = ["Topic :: Scientific/Engineering :: Artificial Intelligence"]

[tool.poetry.dependencies]
python = "^3.10,"
sae_lens = ">=5.4.0"
transformer-lens = ">=2.0.0"
torch = ">=2.1.0"
einops = ">=0.8.0"
numpy = ">=1.26.4,<2.0"
pandas = ">=2.1.2"
tqdm = ">=4.66.4"
jaxtyping = ">=0.2.25"
beartype = ">=0.14.1"
scikit-learn = ">=1.5.2"
collectibles = ">=0.1.5"
pydantic = ">=2.9.2"
seaborn = ">=0.13.2"
plotly = ">=5.22.0"
matplotlib = ">=3.8.4"
tabulate = ">=0.9.0"
openai = ">=1.0.0"
torchvision = ">=0.16.1" # required for what I believe are nnsight related issues

# If running into dependency issues these are tested and working
# [tool.poetry.dependencies]
# python = "^3.10"
# beartype = "0.14.1"
# collectibles = "0.1.5"
# einops = "0.8.0"
# jaxtyping = "0.2.37"
# matplotlib = "3.10.0"
# numpy = "1.26.4"
# openai = "1.61.1"
# pandas = "2.2.3"
# plotly = "5.24.1"
# pydantic = "2.10.6"
# scikit-learn = "1.6.1"
# seaborn = "0.13.2"
# tabulate = "0.9.0"
# torch = "2.5.1"
# torchvision = "0.20.1"
# tqdm = "4.67.1"
# transformer-lens = "2.11.0"
# sae_lens = "5.4.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.2"
nbformat = ">=5.10.4"
ipykernel = ">=6.29.5"
nbstripout = ">=0.7.1"
loguru = ">=0.7.0"
ruff = "^0.9.2"
pyright = "^1.1.392.post0"
pre-commit = "^4.1.0"

[tool.pyright]
typeCheckingMode = "standard"
reportPrivateImportUsage = "none"

[tool.ruff]
exclude = ["dist", "docs", "*.ipynb"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731", "F722", "F821", "ARG001", "ARG005"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = ["sae_bench/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
build_command = "pip install poetry && poetry build"
